SF Primes/src/objects/Account_Hierarchy_Rolldown__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>All_Profiles_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Profiles Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <inlineHelpText>The number of different fields can only be 22 (beyond this, the Account Hierarchy will error).</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Id__c</fullName>
        <label>Profile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Condition__c</fullName>
        <label>Query Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_WebID_Field__c</fullName>
        <label>Update WebID Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Hierarchy Rolldown</label>
</CustomObject>